fix(core): set mobile navbar z-index to 100 so it always stays on top

--- a/src/scss/custom/_navigation.scss
+++ b/src/scss/custom/_navigation.scss
@@ -31,7 +31,7 @@
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 100;
     display: none;
     width: 100%; //-occupa sempre tutta lo spazio orizzontale disponibile
 
